--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>FABL:TEMPLATE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <link href="https://fonts.googleapis.com/css?family=Asar|Sansita" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Asar|Sansita" rel="styles.css">
     <script src="main.js"></script>
 </head>
 <body>
 <header class="">
-    <img id="logo" src="img/logo-FABL-horz_07.png">
+    <img id="logo" src="images/logos/logo-FABL-horz_07.png">
 <nav class="">
 <ul>
     <li><a href="#">Home</a></li>
@@ -28,11 +28,11 @@
 <footer class="">
 <div id="copyright"></div>
 <ul>
-    <li><a href="#"><img src="img/fb.png"></a></li>
-    <li><a href="#"><img src="img/tw.png"></a></li>
-    <li><a href="#"><img src="img/ig.png"></a></li>
-    <li><a href="#"><img src="img/gm.png"></a></li>
-    <li><a href="#"><img src="img/lk.png"></a></li>
+    <li><a href="#"><img src="images/socialicons/fb.png"></a></li>
+    <li><a href="#"><img src="images/socialicons/tw.png"></a></li>
+    <li><a href="#"><img src="images/socialicons/ig.png"></a></li>
+    <li><a href="#"><img src="images/socialicons/gm.png"></a></li>
+    <li><a href="#"><img src="images/socialicons/lk.png"></a></li>
 </ul>
 </footer>
 </body>
