--- a/index.html
+++ b/index.html
@@ -5,35 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>FABL:TEMPLATE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css" />
     <link href="https://fonts.googleapis.com/css?family=Asar|Sansita">
     <script src="main.js"></script>
 </head>
-<body>
-<header class="">
-    <img id="logo" src="images/logos/logo-FABL-horz_07.png">
-<nav class="">
-<ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">RubyRoute</a></li>
-    <li><a href="#">Products</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Contact</a></li>
-</ul>>
-</nav>
-</header>
-<div>
-    
-</div>
-<footer class="">
-<div id="copyright"></div>
-<ul>
-    <li><a href="#"><img src="images/socialicons/fb.png"></a></li>
-    <li><a href="#"><img src="images/socialicons/tw.png"></a></li>
-    <li><a href="#"><img src="images/socialicons/ig.png"></a></li>
-    <li><a href="#"><img src="images/socialicons/gm.png"></a></li>
-    <li><a href="#"><img src="images/socialicons/lk.png"></a></li>
-</ul>
-</footer>
-</body>
+    <body>
+    <header class="">
+        <img id="logo" src="images/logos/logo-FABL-horz_07.png">
+    <nav class="">
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">RubyRoute</a></li>
+        <li><a href="#">Products</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul
+    </nav>
+    </header>
+    <div>
+        
+    </div>
+    <footer class="">
+    <div id="copyright"></div>
+    <ul>
+        <li><a href="#"><img src="images/socialicons/fb.png"></a></li>
+        <li><a href="#"><img src="images/socialicons/tw.png"></a></li>
+        <li><a href="#"><img src="images/socialicons/ig.png"></a></li>
+        <li><a href="#"><img src="images/socialicons/gm.png"></a></li>
+        <li><a href="#"><img src="images/socialicons/lk.png"></a></li>
+    </ul>
+    </footer>
+    </body>
 </html>
