made requested changes

--- a/template-landing.html
+++ b/template-landing.html
@@ -13,13 +13,13 @@
         <header>
             <img id="logo" src="images/logos/logo-FABL-horz_07.png">
         <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">RubyRoute</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">RubyRoute</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
         </nav>
         </header>
         <div>
@@ -27,15 +27,15 @@
                 <article></article>
                 <img>
             </section>
-            <section></section>
-            <section></section>
-                <nav>
-                    <ul>
-                        <li><a href="#">back to top</a></li>
-                        <li><a href="#">back to section 1</a></li>
-                        <li><a href="#">back to section 2</a></li>
-                    </ul>
-                </nav>
+            <section id="#"></section>
+            <section id="#"></section>
+            <nav>
+                <ul>
+                    <li><a href="#">back to top</a></li>
+                    <li><a href="#">back to section 1</a></li>
+                    <li><a href="#">back to section 2</a></li>
+                </ul>
+            </nav>
         </div>
         <footer>
         <div id="copyright">
