--- a/template-basic.html
+++ b/template-basic.html
@@ -23,7 +23,21 @@
         </nav>
         </header>
         <div>
-            
+            <section id="">
+                <div>
+                    <article></article>
+                </div>
+                <div></div>
+            </section>
+            <section id="#"></section>
+            <section id="#"></section>
+            <nav>
+                <ul>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                </ul>
+            </nav> 
         </div>
         <footer>
         <div id="copyright">
