updated landing css

--- a/template-landing.html
+++ b/template-landing.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Asar|Sansita" rel="styles.css">
     <script src="main.js"></script>
 </head>
-    <body>
+    <body class="landing">
         <header>
             <img id="logo" src="images/logos/logo-FABL-horz_07.png">
         <nav>
@@ -24,11 +24,30 @@
         </header>
         <div>
             <section id="hero">
-                <article></article>
-                <img>
+                <article>
+                    <h1>Ruby Route</h1>
+                    <h2>Get There Safely.  Train of Gravy.</h2>
+                    <p>Introdcing the realms first Social Map Currency.  Find your destination, follow the safetey checkpoints, get paid in Tolkiens, redeemable
+                        at bazaars around the world!  Share what you purchase to sow envy amongst your peers!</p>
+                </article>
+                <img class="hand" src="images/hand.png" rel="hand holding phone">
             </section>
-            <section id="#"></section>
-            <section id="#"></section>
+            <section id="feature">
+                <article>
+                    <h1>Ruby Route</h1>
+                    <h2>Get There Safely.  Train of Gravy.</h2>
+                    <p>Introdcing the realms first Social Map Currency.  Find your destination, follow the safetey checkpoints, get paid in Tolkiens, redeemable
+                        at bazaars around the world!  Share what you purchase to sow envy amongst your peers!</p>
+                </article>
+            </section>
+            <section id="reviews">
+                <article>
+                    <h1>Ruby Route</h1>
+                    <h2>Get There Safely.  Train of Gravy.</h2>
+                    <p>Introdcing the realms first Social Map Currency.  Find your destination, follow the safetey checkpoints, get paid in Tolkiens, redeemable
+                        at bazaars around the world!  Share what you purchase to sow envy amongst your peers!</p>
+                </article>
+            </section>
             <nav>
                 <ul>
                     <li><a href="#">back to top</a></li>
