updated landing css

--- a/template-landing.html
+++ b/template-landing.html
@@ -22,9 +22,9 @@
             </ul>
         </nav>
         </header>
-        <div>
+        <div class="sectionDiv">
             <section id="hero">
-                <article>
+                <article class="article">
                     <h1>Ruby Route</h1>
                     <h2>Get There Safely.  Train of Gravy.</h2>
                     <p>Introdcing the realms first Social Map Currency.  Find your destination, follow the safetey checkpoints, get paid in Tolkiens, redeemable
