adding css and modified html

--- a/about.html
+++ b/about.html
@@ -35,9 +35,10 @@
                 </div>
                 <div class="right">
                 <h2>Team Members</h2>
+                        <img id="Carol" src="images/bio/dusa.png">
                         <h3>Carol</h3>
                             <p>Original founder of FABL and concerned mother of the famous Ruby a.k.a “Red Riding Hood”. Carol created FABL as a mother first, making sure that her products are catered towards the parents looking for something to keep their child safe and sound.</p>
-
+                        <img id="Garrett" src="images/bio/larry.png">
                         <h3>Garrett</h3>
                             <p>Co-Founder of FABL, and Father of Ruby. Garrett saw the concern of his wife along with other parents and collaborated with Carol to create a “kids first” app development company. He shares the passion of his wife to be certain that his and every other parentʼs child are taken care of to the fullest.</p>
 
