added card structure to products page and modified js

--- a/products.html
+++ b/products.html
@@ -23,21 +23,18 @@
         </nav>
         </header>
         <div>
-            <section id="">
+            <section id="products">
+                <h1>Products</h1>
                 <div>
-                    <article></article>
+                    <article class="card">
+                        <img src="#">
+                        <h2>Product Name</h2>
+                        <p>Price</p>
+                        <p>Description</p>
+                    </article>
                 </div>
                 <div></div>
             </section>
-            <section id="#"></section>
-            <section id="#"></section>
-            <nav>
-                <ul>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                </ul>
-            </nav> 
         </div>
         <footer>
         <div id="copyright">
