--- a/products.html
+++ b/products.html
@@ -6,6 +6,7 @@
     <title>FABL:TEMPLATE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="/css/styles.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/css/styles-products.css" />
     <link href="https://fonts.googleapis.com/css?family=Asar|Sansita" rel="styles.css">
     <script src="/js/products.js"></script>
 </head>
