--- a/products.html
+++ b/products.html
@@ -33,6 +33,48 @@
                         <p>Price</p>
                         <p>Description</p>
                     </article>
+                    <article class="card">
+                            <img src="#">
+                            <h2>Product Name</h2>
+                            <p>Price</p>
+                            <p>Description</p>
+                    </article>
+                    <article class="card">
+                            <img src="#">
+                            <h2>Product Name</h2>
+                            <p>Price</p>
+                            <p>Description</p>
+                    </article>
+                    <article class="card">
+                            <img src="#">
+                            <h2>Product Name</h2>
+                            <p>Price</p>
+                            <p>Description</p>
+                    </article>
+                    <article class="card">
+                            <img src="#">
+                            <h2>Product Name</h2>
+                            <p>Price</p>
+                            <p>Description</p>
+                        </article>
+                        <article class="card">
+                                <img src="#">
+                                <h2>Product Name</h2>
+                                <p>Price</p>
+                                <p>Description</p>
+                        </article>
+                        <article class="card">
+                                <img src="#">
+                                <h2>Product Name</h2>
+                                <p>Price</p>
+                                <p>Description</p>
+                        </article>
+                        <article class="card">
+                                <img src="#">
+                                <h2>Product Name</h2>
+                                <p>Price</p>
+                                <p>Description</p>
+                        </article>
                 </div>
                 <div></div>
             </section>
