--- a/products.html
+++ b/products.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" type="text/css" media="screen" href="/css/styles.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="/css/styles-products.css" />
     <link href="https://fonts.googleapis.com/css?family=Asar|Sansita" rel="styles.css">
-    <script src="/js/products.js"></script>
 </head>
     <body>
         <header>
@@ -26,55 +25,8 @@
         <div>
             <section id="products">
                 <h1>Products</h1>
-                <div>
-                    <article class="card">
-                        <img src="#">
-                        <h2>Product Name</h2>
-                        <p>Price</p>
-                        <p>Description</p>
-                    </article>
-                    <article class="card">
-                            <img src="#">
-                            <h2>Product Name</h2>
-                            <p>Price</p>
-                            <p>Description</p>
-                    </article>
-                    <article class="card">
-                            <img src="#">
-                            <h2>Product Name</h2>
-                            <p>Price</p>
-                            <p>Description</p>
-                    </article>
-                    <article class="card">
-                            <img src="#">
-                            <h2>Product Name</h2>
-                            <p>Price</p>
-                            <p>Description</p>
-                    </article>
-                    <article class="card">
-                            <img src="#">
-                            <h2>Product Name</h2>
-                            <p>Price</p>
-                            <p>Description</p>
-                        </article>
-                        <article class="card">
-                                <img src="#">
-                                <h2>Product Name</h2>
-                                <p>Price</p>
-                                <p>Description</p>
-                        </article>
-                        <article class="card">
-                                <img src="#">
-                                <h2>Product Name</h2>
-                                <p>Price</p>
-                                <p>Description</p>
-                        </article>
-                        <article class="card">
-                                <img src="#">
-                                <h2>Product Name</h2>
-                                <p>Price</p>
-                                <p>Description</p>
-                        </article>
+                <div id="cards">
+                    
                 </div>
                 <div></div>
             </section>
@@ -89,4 +41,5 @@
             </ul>
         </footer>
     </body>
+    <script src="/js/products.js"></script>
 </html>
