--- a/thruby.html
+++ b/thruby.html
@@ -10,9 +10,9 @@
     <script src="main.js"></script>
 </head>
     <body class="landing">
-        <header>
+        <header class="thrubyHeader">
             <img id="logo" src="images/logos/logo-FABL-horz_07.png">
-        <nav>
+        <nav class="thrubyNav">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">RubyRoute</a></li>
@@ -24,55 +24,62 @@
         </header>
         <div class="sectionDiv">
             <section id="hero">
-                <article class="article">
+                <article class="thruby">
                     <h1>thRUBY</h1>
                     <h2>Get There Safely.  Train of Gravy.</h2>
                     <p>Introdcing the realms first Social Map Currency.  Find your destination, follow the safetey checkpoints, get paid in Tolkiens, redeemable at bazaars around the world!  Share what you purchase to sow envy (or devotion) amongst your peers!</p>
+                    <button class="download1">Download Here</button>
                 </article>
                 <img class="hand" src="images/hand.png" rel="hand holding phone">
             </section>
-            <section id="feature">
+            <section id="features">
                 <article>
                     <h1>Features</h1>
-                    <h2>Danger Tracker</h2>
-                        <p>What do you want to avoid?  Witches? Wolves? Goblins? Hackers? Our Master Safteymancers
-                        have you covered!  The more dangerous denizens you avoid, the more coin you collect!</p>
-                    <h2>Tolkein Stacker</h2>
-                        <p>It's like...not that complicated.  Reach a safety checkpoint, get your Tolkeins.  These special coins are infused with our patented Essence of Life-- Just having them means that you are still alive!  The more you have, the more not dead you are!  All bazaars accept them.  They cannot reject them without casting a performative hex on themselves! Being dead is so uncouth!</p>
-                    <h2>Social Lacquer</h2>        
-                        <p>Seal the deal! Share what you buy to show the realm how life-affirming and gracious you are!</p>
+                        <h2>Danger Tracker</h2>
+                            <p>What do you want to avoid?  Witches? Wolves? Goblins? Hackers? Our Master Safteymancers
+                            have you covered!  The more dangerous denizens you avoid, the more coin you collect!</p>
+                        <h2>Tolkein Stacker</h2>
+                            <p>It's like...not that complicated.  Reach a safety checkpoint, get your Tolkeins.  These special coins are infused with our patented Essence of Life-- Just having them means that you are still alive!  The more you have, the more not dead you are!  All bazaars accept them.  They cannot reject them without casting a performative hex on themselves! Being dead is so uncouth!</p>
+                        <h2>Social Lacquer</h2>        
+                            <p>Seal the deal! Share what you buy to show the realm how life-affirming and gracious you are!</p>
+                    <button class="download">Download Here</button>
                 </article>
-                <img class="hand" src="images/hand2.png" rel="hand holding phone">
+                
             </section>
             <section id="reviews">
                 <article>
                     <h1>Reviews</h1>
                     <h2>Gretel Crumm</h2>
-                        <p>I love this app!  Now when I get lost, my brother and I can get double the Tolkiens when we use Ruby Route, letting us buy MORE bread instead of using it up!  It's simple, pretty, and it works!</p>
-                        <p>&starf;&starf;&starf;&starf;&starf;</p>
+                        <p>I love this app!  Now when I get lost, my brother and I can get double the Tolkiens when we use thRUBY, letting us buy MORE bread instead of using it up!  It's simple, pretty, and it works!</p>
                     <h2>Blondie Locke</h2>
-                        <p>Other apps like this either have too many feaures or not enough life-lending money.  Ruby Route is just right.  I can track as many or as little danger as I want in order to find the perfect place to update my "dine + dream" blog!  Plus, I totally get paid big bucks!  ~~PRETTY AWESOME I GUESS~~ (ᵔᴥᵔ)(ᵔᴥᵔ)(ᵔᴥᵔ)</p>
-                        <p>&starf;&starf;&starf;&star;&star;</p>
+                        <p>Other apps like this either have too many feaures or not enough life-lending money.  thRUBY is just right.  I can track as many or as few dangers as I want in order to find the perfect place to update my "dine + dream" blog!  Plus, I totally get paid big bucks!  ~~PRETTY AWESOME I GUESS~~ (ᵔᴥᵔ)(ᵔᴥᵔ)(ᵔᴥᵔ)</p>
                     <h2>Momma Gothel</h2>
                         <p>This app is simply lucious!  I can keep track of my beloved daughter, Rapunzel, all the time now!  Nothing soothes my 
-                        worry more than knowing that my dear daughter's hair, I mean...life-- is making it's way through our copse sans corpse; bringing to her mummy plenty of those life-giving Tolkiens.  She gives them willingly, of course.  I wonder where she learned such an effervescing variety of altruism ;)</p>
-                        <p>&starf;&starf;&starf;&starf;&star;</p>
+                        worry more than knowing that my dear daughter's hair, I mean...well being-- is making it's way through our copse sans corpse; bringing to her mummy plenty of those life-giving Tolkiens.  She gives them willingly, of course.  I wonder where she learned such an effervescing variety of altruism ;)</p>
+                    <button class="download">Download Here</button>                     
                 </article>
-                <button class="download">Download Here</button>
+                <aside class="stars">
+                    <h1>&starf;&starf;&starf;&starf;&starf;</h1>
+                    <h1>&starf;&starf;&starf;&star;&star;</h1>
+                    <h1>&starf;&starf;&starf;&starf;&star;</h1>
+                </aside>
             </section>
-            <nav>
-                <ul>
-                    <li><a href="#">Back to thRUBY</a></li>
-                    <li><a href="#">Back to Features</a></li>
-                    <li><a href="#">Back to Reviews</a></li>
-                </ul>
-            </nav>
+            <div class="bottomNavDiv">
+                <nav class="bottomNav">
+                    <ul>
+                        <li><a href="thruby">Back to thRUBY</a></li>
+                        <li><a href="features">Back to Features</a></li>
+                        <li><a href="reviews">Back to Reviews</a></li>
+                        <li><a href="contact">Contact Us</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
-        <footer>
-        <div id="copyright">
+        <footer class="thrubyFooter">
+        <div id="thrubyCopy">
             <p>&copy; FABL 2018</p>
         </div>
-            <ul>
+            <ul class="socialIcons">
                 <li><a href="#"><img src="images/socialicons/fb.png"></a></li>
                 <li><a href="#"><img src="images/socialicons/tw.png"></a></li>
             </ul>
