--- a/about.html
+++ b/about.html
@@ -24,11 +24,15 @@
         </nav>
         </header>
         <div>
-            <section id="">
+            <section class="title">
+                    <h1>About FABL</h1>
+            </section>
+            <section class="">
                 <div class="left">
+                       
+            
                 <article>
-                        <h1>About FABL</h1>
-                        <h2>Who are we?</h2>
+                       <h2>Who are we?</h2>
                             <p>FABL is a company made by parents, for parents. With the safety of children in mind, our company works day in and day out to be sure that parents have something to help them keep their children safe and sound
                                                 in any situation that may concern them normally. With our products, parents can be sure that they know where their child is when traveling alone, check up on their personal health, keep busy schedules simple and clean, and be sure their child is transported safely to their destination along with games and entertainment for children to keep them happy and engaged. Nothing is more important to us than the relationship between parent and child, therefore we will continue to work our hardest to ensure that parents and children alike will have a seamless, entertaining, and fun-filled experience with our applications.</p>
                 </article>
