--- a/about.html
+++ b/about.html
@@ -27,10 +27,15 @@
             <section class="title">
                     <h1>About FABL</h1>
             </section>
+            <section class="about">
+                <img>
+                <article>
+                    <h2></h2>
+                    <p></p>
+                </article>
+            </section>
             <section class="">
-                <div class="left">
-                       
-            
+                <div class="left">  
                 <article>
                        <h2>Who are we?</h2>
                             <p>FABL is a company made by parents, for parents. With the safety of children in mind, our company works day in and day out to be sure that parents have something to help them keep their children safe and sound
