adding sections html and css

--- a/about.html
+++ b/about.html
@@ -24,17 +24,75 @@
         </nav>
         </header>
         <div>
-            <section class="title">
-                    <h1>About FABL</h1>
-            </section>
-            <section class="about">
+        <section class="title">
+            <h1>About FABL</h1>
+        </section>
+        <section class="about">
+            <h2></h2>
+            <img>
+            <article>
+                <h3></h3>
+                <p></p>
+            </article>
+        </section>
+        <section class="about">
+                <h2></h2>
                 <img>
                 <article>
-                    <h2></h2>
+                    <h3></h3>
                     <p></p>
                 </article>
-            </section>
-            <section class="">
+        </section>
+        <section class="about">
+            <h2></h2>
+            <img>
+            <article>
+                <h3></h3>
+                <p></p>
+            </article>
+        </section>
+        <section class="about">
+            <h2></h2>
+            <img>
+            <article>
+                <h3></h3>
+                <p></p>
+            </article>
+        </section>
+        <section class="about">
+            <h2></h2>
+            <img>
+            <article>
+                <h3></h3>
+                <p></p>
+            </article>
+        </section>
+        <section class="about">
+                <h2></h2>
+                <img>
+                <article>
+                    <h3></h3>
+                    <p></p>
+                </article>
+        </section>
+        <section class="about">
+            <h2></h2>
+            <img>
+            <article>
+                <h3></h3>
+                <p></p>
+            </article>
+        </section>
+        <section class="about">
+            <h2></h2>
+            <img>
+            <article>
+                <h3></h3>
+                <p></p>
+            </article>
+        </section>
+            
+<section class="">
                 <div class="left">  
                 <article>
                        <h2>Who are we?</h2>
