adding styles to home buttons and classes to elements

--- a/home.html
+++ b/home.html
@@ -6,10 +6,11 @@
     <title>Landing Template</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="/css/styles.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/css/styles-home.css" />
     <link href="https://fonts.googleapis.com/css?family=Asar|Sansita" rel="styles.css">
     <script src="main.js"></script>
 </head>
-    <body>
+    <body id="home">
         <header>
             <img id="logo" src="images/logos/logo-FABL-horz_07.png">
         <nav>
@@ -27,8 +28,8 @@
                 <article>
                     <h1>RubyRoute</h1>
                     <p>Remove the worry from your child traveling alone with a tracking app that includes checkpoints, mini-games, and notifications for when your child arrives at their destination.</p>
-                    <button id="download">Download It Here</button>
-                    <button id="learn">Learn More</button>
+                    <button class="download1">Download It Here</button>
+                    <button class="download1">Learn More</button>
                 </article>
                 <img src="/images/hand2.png" alt="#">
             </section>
@@ -50,7 +51,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </div>
             </section>
-            <section id="#">
+            <section id="contact">
                 <h2>Contact Us</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 <form>
