added footer styling using thruby styling

--- a/home.html
+++ b/home.html
@@ -66,11 +66,11 @@
                 </ul>
             </nav>
         </div>
-        <footer>
-        <div id="copyright">
+        <footer class="thrubyFooter">
+        <div id="thrubyCopy">
             <p>Copyright information blah blah blah</p>
         </div>
-            <ul>
+            <ul class="socialIcons">
                 <li><a href="#"><img src="images/socialicons/fb.png"></a></li>
                 <li><a href="#"><img src="images/socialicons/tw.png"></a></li>
             </ul>
