added styling to hero section

--- a/home.html
+++ b/home.html
@@ -23,15 +23,15 @@
             </ul>
         </nav>
         </header>
-        <div>
+        <div class="sectionDiv">
             <section id="hero">
-                <article>
-                    <h1>RubyRoute</h1>
+                <article class="thruby">
+                    <h1>thRuby</h1>
                     <p>Remove the worry from your child traveling alone with a tracking app that includes checkpoints, mini-games, and notifications for when your child arrives at their destination.</p>
                     <button class="download1">Download It Here</button>
                     <button class="download1">Learn More</button>
                 </article>
-                <img src="/images/hand2.png" alt="#">
+                <img class="hand" src="/images/hand2.png" alt="#">
             </section>
             <section id="featuredApps">
                 <h2>Featured Apps</h2>
