finished home hero section

--- a/home.html
+++ b/home.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Landing Template</title>
+    <title>FABL: Welcome | thRuby</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="/css/styles.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="/css/styles-home.css" />
     <link href="https://fonts.googleapis.com/css?family=Asar|Sansita" rel="styles.css">
     <script src="main.js"></script>
 </head>
-    <body id="home">
-        <header>
+    <body class="landing">
+        <header class="thrubyHeader">
             <img id="logo" src="images/logos/logo-FABL-horz_07.png">
-        <nav>
-            <ul>
-                <li><a href="../home.html">Home</a></li>
-                <li><a href="../thruby.html">RubyRoute</a></li>
-                <li><a href="../products.html">Products</a></li>
-                <li><a href="../about.html">About</a></li>
-                <li><a href="../contact.html">Contact</a></li>
-            </ul>
-        </nav>
+            <nav class="thrubyNav">
+                <ul>
+                    <li><a href="../home.html">Home</a></li>
+                    <li><a href="../thruby.html">RubyRoute</a></li>
+                    <li><a href="../products.html">Products</a></li>
+                    <li><a href="../about.html">About</a></li>
+                    <li><a href="../contact.html">Contact</a></li>
+                </ul>
+            </nav>
         </header>
         <div class="sectionDiv">
             <section id="hero">
@@ -31,7 +31,7 @@
                     <button class="download1">Download It Here</button>
                     <button class="download1">Learn More</button>
                 </article>
-                <img class="hand" src="/images/hand2.png" alt="#">
+                <img class="hand" src="/images/hand2.png" alt="hand holding phone">
             </section>
             <section id="featuredApps">
                 <h2>Featured Apps</h2>
