--- a/about.html
+++ b/about.html
@@ -27,68 +27,73 @@
         <section class="title">
             <h1>About FABL</h1>
         </section>
+
         <section class="about">
-            <h2></h2>
+            <h2>Who Are We?</h2>
             <img>
             <article>
                 <h3></h3>
-                <p></p>
+                <p>FABL is a company made by parents, for parents. With the safety of children in mind, our company works day in and day out to be sure that parents have something to help them keep their children safe and sound
+                        in any situation that may concern them normally. With our products, parents can be sure that they know where their child is when traveling alone, check up on their personal health, keep busy schedules simple and clean, and be sure their child is transported safely to their destination along with games and entertainment for children to keep them happy and engaged. Nothing is more important to us than the relationship between parent and child, therefore we will continue to work our hardest to ensure that parents and children alike will have a seamless, entertaining, and fun-filled experience with our applications.</p>
             </article>
         </section>
+
         <section class="about">
-                <h2></h2>
+                <h2>Team</h2>
                 <img>
                 <article>
                     <h3></h3>
                     <p></p>
                 </article>
         </section>
+
         <section class="about">
-            <h2></h2>
-            <img>
+            <img id="Carol" src="images/bio/dusa.png">
             <article>
-                <h3></h3>
+                <h3>Carol</h3>
+                <p>Original founder of FABL and concerned mother of the famous Ruby a.k.a “Red Riding Hood”. Carol created FABL as a mother first, making sure that her products are catered towards the parents looking for something to keep their child safe and sound.</p>
+            </article>
+        </section>
+
+        <section class="about">
+            <img id="Garrett" src="images/bio/larry.png">
+            <article>
+                <h3>Garrett</h3>
+                <p>Co-Founder of FABL, and Father of Ruby. Garrett saw the concern of his wife along with other parents and collaborated with Carol to create a “kids first” app development company. He shares the passion of his wife to be certain that his and every other parentʼs child are taken care of to the fullest.</p>
                 <p></p>
             </article>
         </section>
+
         <section class="about">
-            <h2></h2>
-            <img>
+            <img id="Laura" src="images/bio/laura.png">
             <article>
-                <h3></h3>
+                <h3>Laura</h3>
+                <p>Along with our senior developer, Lauraʼs mission as Director of Development is to develop the best possible solutions to the common concerns of parents. Leading our senior developer to help create the perfect app for each scenario is the top priority for our team and company as a whole.</p>
                 <p></p>
             </article>
         </section>
+
         <section class="about">
-            <h2></h2>
-            <img>
-            <article>
-                <h3></h3>
-                <p></p>
-            </article>
-        </section>
-        <section class="about">
-                <h2></h2>
-                <img>
+                <img id="Taylor" src="images/bio/taylor.png">
                 <article>
-                    <h3></h3>
-                    <p></p>
+                    <h3>Taylor</h3>
+                    <p>As our Director of Marketing, Taylor is making sure that our products are easily accessible to the parents looking for aid in their childʼs safety. Having our applications visible to all walks of life makes sure that no parent is left trying to dig for crucial information only to be left empty handed. Taylor is making sure we can help as many parents and children as possible.</p>
                 </article>
         </section>
+
         <section class="about">
-            <h2></h2>
-            <img>
+            <img id="Million" src="images/bio/million.png">
             <article>
-                <h3></h3>
-                <p></p>
+                <h3>Million</h3>
+                <p>Working alongside the Director of Development, Millian is our senior developer working hard on the ins and outs of how our applications function and what they are able to do for our users. Making sure that parents receive every feature necessary to make sure they are comfortable is Millianʼs primary goal.</p>
             </article>
         </section>
+
         <section class="about">
-            <h2></h2>
-            <img>
+            <img id="Haden" src="images/bio/haden.png">
             <article>
-                <h3></h3>
-                <p></p>
+                <h3>Haden</h3>
+                <p>Having our applications fun and easy to use is crucial to us to make sure we give our users the best experience possible. Our Senior UIX Designer Haden is working day by day with feedback from our users to refine our products to fit the wants and needs of parents and their children alike.</p>
             </article>
         </section>
             
