--- a/about.html
+++ b/about.html
@@ -10,18 +10,18 @@
     <link rel="stylesheet" type="text/css" href="styles-about.css">.
     <script src="main.js"></script>
 </head>
-    <body>
-        <header>
+<body class="landing">
+        <header class="thrubyHeader">
             <img id="logo" src="images/logos/logo-FABL-horz_07.png">
-        <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">RubyRoute</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-        </nav>
+            <nav class="thrubyNav">
+                <ul>
+                    <li><a href="../home.html">Home</a></li>
+                    <li><a href="../thruby.html">RubyRoute</a></li>
+                    <li><a href="../products.html">Products</a></li>
+                    <li><a href="../about.html">About</a></li>
+                    <li><a href="../contact.html">Contact</a></li>
+                </ul>
+            </nav>
         </header>
         <div>
         <section class="title">
@@ -127,14 +127,14 @@
                 </div>
             </section>
         </div>
-        <footer>
-        <div id="copyright">
-            <p>Copyright information blah blah blah</p>
-        </div>
-            <ul class="socialicons">
-                <li><a href="#"><img src="images/socialicons/fb.png"></a></li>
-                <li><a href="#"><img src="images/socialicons/tw.png"></a></li>
-            </ul>
-        </footer>
+        <footer class="thrubyFooter">
+                <div id="thrubyCopy">
+                    <p>Copyright information blah blah blah</p>
+                </div>
+                    <ul class="socialIcons">
+                        <li><a href="#"><img src="images/socialicons/fb.png"></a></li>
+                        <li><a href="#"><img src="images/socialicons/tw.png"></a></li>
+                    </ul>
+                </footer>
     </body>
 </html>
