fixed home page

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     <script src="main.js"></script>
 </head>
     <body class="landing">
-        <header class="thrubyHeader">
+        <header class="homeHeader">
             <img id="logo" src="images/logos/logo-FABL-horz_07.png">
             <nav class="thrubyNav">
                 <ul>
@@ -34,22 +34,30 @@
                 <img class="hand" src="/images/hand2.png" alt="hand holding phone">
             </section>
             <section id="featuredApps">
-                <h2>Featured Apps</h2>
-                <div id="app-1" class="featured">
-                    <img src="/images/appIcons/lyingth.png">
-                    <h3>Lyingth</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div class="apps">
+                    <h2>Featured Apps</h2>
+                    <div id="app-1" class="featured">
+                        <a href="../products.html"><img src="/images/appIcons/lyingth.png"></a>
+                        <h3>Lyingth</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </div>
+                    <div id="app-2" class="featured">
+                        <a href="../products.html"><img src="/images/appIcons/carriage.png"></a>
+                        <h3>Carriage</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </div>
+                    <div id="app-3" class="featured">
+                        <a href="../products.html"><img src="/images/appIcons/princer.png"></a>
+                        <h3>PrincePoint</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </div>
+                    <div class="featuredButtons">
+                        <button class="download1">Download It Here</button>
+                        <button class="download1">Download It Here</button>
+                        <button class="download1">Download It Here</button>
+                    </div>
                 </div>
-                <div id="app-2" class="featured">
-                    <img src="/images/appIcons/carriage.png">
-                    <h3>Carriage</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </div>
-                <div id="app-3" class="featured">
-                    <img src="/images/appIcons/princer.png">
-                    <h3>PrincePoint</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </div>
+
             </section>
             <section id="contact">
                 <h2>Contact Us</h2>
