--- a/thruby.html
+++ b/thruby.html
@@ -14,11 +14,11 @@
             <img id="logo" src="images/logos/logo-FABL-horz_07.png">
         <nav class="thrubyNav">
             <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="thruby.html">thRUBY</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="../home.html">Home</a></li>
+                <li><a href="../thruby.html">thRUBY</a></li>
+                <li><a href="../products.html">Products</a></li>
+                <li><a href="../about.html">About</a></li>
+                <li><a href="../contact.html">Contact</a></li>
             </ul>
         </nav>
         </header>
