--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <script src="main.js"></script>
 </head>
 <body class="landing">
-        <header class="thrubyHeader">
+        <header class="aboutHeader">
             <img id="logo" src="images/logos/logo-FABL-horz_07.png">
             <nav class="thrubyNav">
                 <ul>
