--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
             <nav class="thrubyNav">
                 <ul>
                     <li><a href="../home.html">Home</a></li>
-                    <li><a href="../thruby.html">RubyRoute</a></li>
+                    <li><a href="../thruby.html">thRUBY</a></li>
                     <li><a href="../products.html">Products</a></li>
                     <li><a href="../about.html">About</a></li>
                     <li><a href="../contact.html">Contact</a></li>
