updated contact styles

--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,9 @@
     <script src="main.js"></script>
 </head>
 <body class="landing">
-        <header class="thrubyHeader">
+        <header class="contactHeader">
             <img id="logo" src="images/logos/logo-FABL-horz_07.png">
-            <nav class="thrubyNav">
+            <nav class="contactNav">
                 <ul>
                     <li><a href="../home.html">Home</a></li>
                     <li><a href="../thruby.html">thRuby</a></li>
@@ -24,18 +24,18 @@
             </nav>
         </header>
         <div>
-        <section id="company" class="about">
+        <section id="company" class="contact">
             <h1>Contact FABL</h1>
             <div id="desc">
                 <img src="images/logos/logo-FABL-vert_03.png">
-                <article>
+                <article class="three01">
                     <h3>301 -- Page is Moved Permanently and is Nowhere to Be Found</h3>
                     <p>It's Robin Hood's fault -- he stole from us and now we're too poor to afford further development.</p>
                 </article>
             </div>
         </section>
         </div>
-        <footer class="thrubyFooter">
+        <footer class="contactFooter">
                 <div id="thrubyCopy">
                     <p>Copyright information blah blah blah</p>
                 </div>
