--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
         <div>
         <section id="company" class="contact">
             <h1>Contact FABL</h1>
-            <div id="desc">
+            <div id="contactDiv">
                 <img src="images/logos/logo-FABL-vert_03.png">
                 <article class="three01">
                     <h3>301 -- Page is Moved Permanently and is Nowhere to Be Found</h3>
