--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
         <div class="sectionDiv">
             <section id="hero">
                 <article class="thruby">
-                    <h1>thRuby</h1>
+                    <h1>RubyRoute</h1>
                     <p>Remove the worry from your child traveling alone with a tracking app that includes checkpoints, mini-games, and notifications for when your child arrives at their destination.</p>
                     <button class="download1">Download It Here</button>
                     <button class="download1">Learn More</button>
@@ -39,17 +39,17 @@
                     <div id="app-1" class="featured">
                         <a href="../products.html"><img src="/images/appIcons/lyingth.png"></a>
                         <h3>Lyingth</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p>Practice honesty with your child with our lie detecting app that can discreetly analyze if your child is telling true or a fib.</p>
                     </div>
                     <div id="app-2" class="featured">
                         <a href="../products.html"><img src="/images/appIcons/carriage.png"></a>
                         <h3>Carriage</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p>Be sure your child is in caring hands while traveling to and from home with our trusted group of drivers.</p>
                     </div>
                     <div id="app-3" class="featured">
                         <a href="../products.html"><img src="/images/appIcons/princer.png"></a>
                         <h3>PrincePoint</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p>Find the Prince Charming that fits your fantasy perfectly.</p>
                     </div>
                     <div class="featuredButtons">
                         <button class="download1">Download It Here</button>
