--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
         </div>
         <footer class="thrubyFooter">
                 <div id="thrubyCopy">
-                    <p>Copyright information blah blah blah</p>
+                    <p>&copy; FABL 2018</p>
                 </div>
                     <ul class="socialIcons">
                         <li><a href="#"><img src="images/socialicons/fb.png"></a></li>
