--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         </div>
         <footer class="contactFooter">
                 <div id="thrubyCopy">
-                    <p>Copyright information blah blah blah</p>
+                    <p>&copy; FABL 2018/p>
                 </div>
                     <ul class="socialIcons">
                         <li><a href="#"><img src="images/socialicons/fb.png"></a></li>
